# kokua

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/assets/: README.md
docs/superpowers/specs/: 2026-06-29-config-file-and-data-dir-design.md
src/kokua/: __init__.py  agent_registry.py  assistant.py  build.py  cli.py  config.example.toml  config.py  errors.py  images.py  logging_setup.py  mcp.py  mcp_auth.py  mcp_registry.py  messages.py  paths.py  planning.py  plugins.py  review.py  runtime_settings.py  scheduling.py  settings.py  turn_gate.py  turn_registry.py
src/kokua/channels/: __init__.py  cli.py  web.py
src/kokua/frontends/: __init__.py  cli.py  web.py
src/kokua/toolpacks/: __init__.py  email.py  example.py  image.py  pdf.py
src/kokua/web_static/: index.html
src/mopai/: __init__.py  assistant.py  cli.py  config.py  paths.py  plugins.py  settings.py
src/mopai/channels/: __init__.py  web.py
src/mopai/frontends/: __init__.py  cli.py  web.py
src/mopai/toolpacks/: __init__.py  example.py
src/mopai/web_static/: index.html
tests/: conftest.py  helpers.py  test_agent_registry.py  test_assistant.py  test_config_subagents.py  test_email.py  test_errors.py  test_images.py  test_mcp.py  test_mcp_auth.py  test_pdf.py  test_planning.py  test_plugins.py  test_review.py  test_runtime_settings.py  test_scheduling.py  test_settings.py  test_turn_gate.py  test_turn_registry.py  test_verbose.py  test_web.py  test_web_e2e.py
