[project]
name = "mopai"
version = "0.1.0"
description = "Mopai (my own personal ai): a hackable, modular personal-assistant application built on AIMU."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Paul Saxman" }]
keywords = ["ai", "assistant", "agent", "llm", "aimu", "personal-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Mopai uses AIMU features that are on `main` but not yet in a published release
# (aio.channels/Scheduler, make_document_tools, MCPClient url=). The PyPI build of AIMU
# carries the same version string but lacks these, so the dependency is sourced from the
# local checkout via [tool.uv.sources] below (editable). `uv sync` installs that, not PyPI.
# TODO: pin `aimu>=<next-release>` and drop the source override once those features ship.
dependencies = [
    "aimu[ollama]",
]

[project.optional-dependencies]
# The web front end (Starlette + uvicorn WebSocket server).
web = [
    "starlette",
    "uvicorn>=0.30",
]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/saxman/mopai"
Repository = "https://github.com/saxman/mopai"
Changelog = "https://github.com/saxman/mopai/blob/main/CHANGELOG.md"

# `mopai` runs the selected front end (default: cli). `mopai-web` is a convenience
# for `mopai --frontend web`.
[project.scripts]
mopai = "mopai.cli:main"
mopai-web = "mopai.frontends.web:main"

# Built-in plugins, registered like any third-party module would be. Install a package
# that adds an entry point under these groups and Mopai discovers it at runtime.
[project.entry-points."mopai.frontends"]
cli = "mopai.frontends.cli:FRONTEND"
web = "mopai.frontends.web:FRONTEND"

[project.entry-points."mopai.tools"]
example = "mopai.toolpacks.example:TOOL_PACK"

# Source AIMU from the sibling checkout so `uv sync` installs the local editable copy
# instead of the (stale, same-versioned) PyPI build. Path is relative to this file, so it
# requires `../aimu` to exist. For CI or a fresh clone without it, swap to a git source:
#   aimu = { git = "https://github.com/saxman/aimu", branch = "main" }
[tool.uv.sources]
aimu = { path = "../aimu", editable = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mopai*"]

[tool.setuptools.package-data]
mopai = ["web_static/*.html"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
